rice mill/force-app/main/default/objects/rice_mill__c/rice_mill__c.object-meta.xml
<CustomObject>
    <label>rice mill</label>
    <nameField>
        <displayFormat>rice-{000}</displayFormat>
        <label>rice mill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>rice mills</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>