rice mill/force-app/main/default/objects/rice_mill__c/fields/rice_distributed_to_shops__c.field-meta.xml
<CustomField>
    <fullName>rice_distributed_to_shops__c</fullName>
    <label>rice distributed to shops</label>
    <summarizedField>rice_detail__c.rice_distributed__c</summarizedField>
    <summaryForeignKey>rice_detail__c.rice_mill_1_one__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>