rice mill/force-app/main/default/objects/rice_mill__c/fields/rice_price_kg__c.field-meta.xml
<CustomField>
    <fullName>rice_price_kg__c</fullName>
    <label>rice price/kg</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>